# HTr_case_control

./: .gitignore  README.md  pyproject.toml
examples/: example_usage.py
htr_hit_caller/: __init__.py  cli.py  enrichment.py  filtering.py  hit_calling.py  plots.py
tests/: test_enrichment.py  test_filtering.py  test_hit_calling.py  test_integration.py
