[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "htr_hit_caller"
version = "0.1.0"
description = "Bootstrapping-based hit calling for HT-recruit kinase inhibitor screens"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "scipy>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
htr-hit-caller = "htr_hit_caller.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["htr_hit_caller*"]
